# jbcc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_dev.md  parser.hpp  vcpkg.json
.github/workflows/: formatting-check.yaml  test.yml
libs/lexer/: lexer.cpp  lexer.l
libs/parser/: parser.cpp  parser.hpp  parser.y
src/: CMakeLists.txt  lexer.cpp  lexer.l  main.cpp  parser.cpp  parser.y
tests/: CMakeLists.txt  tester.cpp
